	  yet work (2014-1-1).
	* arch/arm/src/stm32/stm32_serial.c: Single-wire UART support from
	  Thomas Grubler (2014-1-2).
	* tools/configure.c and mkdeps.c:  Fixes for Windows build issues
	  from Max Holtzberg (2014-1-4).
	* configs/olimex-stm32-p107/nsh/Make.defs:  Add native Windoes build
	  support for the Olimex STM32 P107.  From Max Holtzberg (2014-1-4).
	* Makefile.win:  Changes for native Windows build: fix creation of
	  a .version file if one does not exist.  Make sure that the APPDIR
	  environment variable is set before configuring.  From Max Holtzberg
	  (2014-1-4).
	* configs/viewtool-stm32f107/src/stm32_ssd1289.c:  Add support for
	  Viewtool SSD1289-based LCD (untested on initial checkin)  (2013-1-5).
	* arch/arm/include/syscall.h and armv7-a/syscall.h:  Add the syscall.h
	  header file needed for the Cortex-A architecture (2014-1-5).
	* arch/arm/src/a1x/a1x_serial.c:  Remove bad flow control logic.  Add
	  missing interrupt handling logic for UART4-7 (2014-1-6).
	* nuttx/tools/mkconfig.c: Cast size to unsigned in calculation of
	  CONFIG_RAM_END to avoid complains about integer overflow (2013-1-6).
	* nuttx/tools/mkconfig.c: Back out the last change, this causes
	  problems for assembly language.  How to prevent the integer over-
	  flow warnings? (2014-1-6).
	* arch/arm/src/a1x/a1x_serial.c: Handle BUSY interrupt (2014-1-6).
	* arch/arm/src/armv7-a/arm_head.S and arm_pghead.S:  Add more nop's
	  after enabling the MMU.  The cortex-a8 seems to need these
	  (2014-1-7).
	* arch/arm/src/a1x/a1x_serial.c: Correct handling of the BUSY
	  interrupt (2014-1-7).
	* include/sys/types.h:  Add a bogus rsize_t type (2014-1-7).
	* libc/stdio/lib_gets_s.c:  Add a quick'n'dirty implementation of
	  gets_s() which replaces gets() in C11 (2014-1-7).
	* libc/stdio/lib_fopen.c:  Add support for new C11 exclusive open
	  ("x") (2014-1-7)
	* include/threads.h:  First crude cut at a C11 threads.h header
	  file (just maps to pthreads) (2014-1-7).
