@@ -1,7 +1,7 @@
 /****************************************************************************
  * libc/stdio/lib_fgets.c
  *
- *   Copyright (C) 2007-2008, 2011-2013 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2008, 2011-2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -39,58 +39,12 @@
 
 #include <nuttx/config.h>
 
-#include <stdbool.h>
 #include <stdio.h>
-#include <unistd.h>
-#include <string.h>
-#include <ctype.h>
-#include <debug.h>
+
+#include "lib_internal.h"
 
 /****************************************************************************
- * Definitions
- ****************************************************************************/
-/* Some environments may return CR as end-of-line, others LF, and others
- * both.  If not specified, the logic here assumes either (but not both) as
- * the default.
- */
-
-#if defined(CONFIG_EOL_IS_CR)
-#  undef  CONFIG_EOL_IS_LF
-#  undef  CONFIG_EOL_IS_BOTH_CRLF
-#  undef  CONFIG_EOL_IS_EITHER_CRLF
-#elif defined(CONFIG_EOL_IS_LF)
-#  undef  CONFIG_EOL_IS_CR
-#  undef  CONFIG_EOL_IS_BOTH_CRLF
-#  undef  CONFIG_EOL_IS_EITHER_CRLF
-#elif defined(CONFIG_EOL_IS_BOTH_CRLF)
-#  undef  CONFIG_EOL_IS_CR
-#  undef  CONFIG_EOL_IS_LF
-#  undef  CONFIG_EOL_IS_EITHER_CRLF
-#elif defined(CONFIG_EOL_IS_EITHER_CRLF)
-#  undef  CONFIG_EOL_IS_CR
-#  undef  CONFIG_EOL_IS_LF
-#  undef  CONFIG_EOL_IS_BOTH_CRLF
-#else
-#  undef  CONFIG_EOL_IS_CR
-#  undef  CONFIG_EOL_IS_LF
-#  undef  CONFIG_EOL_IS_BOTH_CRLF
-#  define CONFIG_EOL_IS_EITHER_CRLF 1
-#endif
-
-/****************************************************************************
- * Private Type Declarations
- ****************************************************************************/
-
-/****************************************************************************
- * Private Function Prototypes
- ****************************************************************************/
-
-/****************************************************************************
- * Public Data
- ****************************************************************************/
-
-/****************************************************************************
- * Private Data
+ * Pre-processor Definitions
  ****************************************************************************/
 
 /****************************************************************************
@@ -98,7 +52,7 @@
  ****************************************************************************/
 
 /****************************************************************************
- * Global Functions
+ * Public Functions
  ****************************************************************************/
 
 /****************************************************************************
@@ -115,92 +69,7 @@
 
 char *fgets(FAR char *buf, int buflen, FILE *stream)
 {
-  int  nch = 0;
+  /* Let lib_fgets() do the heavy lifting */
 
-  /* Sanity checks */
-
-  if (!stream || !buf || buflen < 1 || stream->fs_fd < 0)
-    {
-      return NULL;
-    }
-
-  if (buflen < 2)
-    {
-      *buf = '\0';
-      return buf;
-    }
-
-  /* Read characters until we have a full line. On each the loop we must
-   * be assured that there are two free bytes in the line buffer:  One for
-   * the next character and one for the null terminator.
-   */
-
-  for(;;)
-    {
-      /* Get the next character */
-
-      int ch = fgetc(stream);
-
-      /* Check for end-of-line.  This is tricky only in that some
-       * environments may return CR as end-of-line, others LF, and
-       * others both.
-       */
-
-#if  defined(CONFIG_EOL_IS_LF) || defined(CONFIG_EOL_IS_BOTH_CRLF)
-      if (ch == '\n')
-#elif defined(CONFIG_EOL_IS_CR)
-      if (ch == '\r')
-#else /* elif defined(CONFIG_EOL_IS_EITHER_CRLF) */
-      if (ch == '\n' || ch == '\r')
-#endif
-        {
-          /* The newline is stored in the buffer along with the null
-           * terminator.
-           */
-
-          buf[nch++] = '\n';
-          buf[nch]   = '\0';
-          return buf;
-        }
-
-      /* Check for end-of-file */
-
-      else if (ch == EOF)
-        {
-          /* End of file with no data? */
-
-          if (!nch)
-            {
-              /* Yes.. return NULL as the end of file mark */
-
-              return NULL;
-            }
-          else
-            {
-              /* Terminate the line */
-
-              buf[nch]   = '\0';
-              return buf;
-            }
-        }
-
-      /* Otherwise, check if the character is printable and, if so, put the
-       * character in the line buffer
-       */
-
-      else if (isprint(ch))
-        {
-          buf[nch++] = ch;
-
-          /* Check if there is room for another character and the line's
-           * null terminator.  If not then we have to end the line now.
-           */
-
-          if (nch + 1 >= buflen)
-            {
-              buf[nch] = '\0';
-              return buf;
-            }
-        }
-    }
+  return lib_fgets(buf, buflen, stream, true, false);
 }
