@@ -37,40 +37,15 @@
  * Included Files
  ****************************************************************************/
 
+#include <nuttx/config.h>
+
+#include <stdint.h>
 #include <stdio.h>
-#include <limits.h>
-#include <string.h>
+
+#include "lib_internal.h"
 
 /****************************************************************************
- * Definitions
- ****************************************************************************/
-
-/****************************************************************************
- * Private Type Declarations
- ****************************************************************************/
-
-/****************************************************************************
- * Private Function Prototypes
- ****************************************************************************/
-
-/****************************************************************************
- * Global Function Prototypes
- ****************************************************************************/
-
-/****************************************************************************
- * Global Constant Data
- ****************************************************************************/
-
-/****************************************************************************
- * Global Variables
- ****************************************************************************/
-
-/****************************************************************************
- * Private Constant Data
- ****************************************************************************/
-
-/****************************************************************************
- * Private Variables
+ * Pre-processor Definitions
  ****************************************************************************/
 
 /****************************************************************************
@@ -96,25 +71,7 @@
 
 FAR char *gets(FAR char *s)
 {
-  /* gets is ALMOST the same as fgets using stdin and no length limit
-   * (hence, the unsafeness of gets).  So let fgets do most of the work.
-   */
+  /* Let lib_fgets() do the heavy lifting */
 
-  FAR char *ret = fgets(s, INT_MAX, stdin);
-  if (ret)
-    {
-      /* Another subtle difference from fgets is that gets replaces
-       * end-of-line markers with null terminators. We will do that as
-       * a second step (with some loss in performance).
-       */
-
-      int len = strlen(ret);
-      if (len > 0 && ret[len-1] == '\n')
-        {
-           ret[len-1] = '\0';
-        }
-    }
-
-  return ret;
+  return lib_fgets(s, RSIZE_MAX, stdin, false, false);
 }
-
